# Adora_Robots

./: .gitignore  README.md
Adora_A1_Mini/adoraa1mini_bringup/: package.xml
Adora_A1_Mini/adoraa1mini_bringup/src/: adoraa1mini_bringup_V2.cpp
Adora_A1_Mini/adoraa1mini_dora_bringup/: CMakeLists.txt  README.md  adora1mini_dataflow.yml
Adora_A1_Mini/adoraa1mini_dora_bringup/src/: adoraa1mini_bringup_V1.cpp  adoraa1mini_dora_node_V1.cc
Adora_A2_Pro/: LiftingPlatform.py  README.md  SerialLiftingMotor_driver_dora.py
Adora_A2_Pro/SerialLiftingMotor_Dora/: SerialLiftingMotor.py  driver_dora.yaml  test_Motor.py  test_SerialLiftingMotor.py
Adora_A2_Pro/SerialLiftingMotor_ROS2/: package.xml
DORA/: README.MD
DORA/adora_chassis_control_dora_node/: CMakeLists.txt  adora1pro_dataflow.yml  adora_teleop.yml
DORA/adora_chassis_control_dora_node/include/: geomsgs_twist_msg.h
DORA/adora_chassis_control_dora_node/nodes/keyboard_teleop/: pyproject.toml
DORA/adora_chassis_control_dora_node/nodes/keyboard_teleop/keyboard_teleop/: main.py  main1.py
DORA/adora_chassis_control_dora_node/src/: adora_chassis_dora_node_V1.cc
DORA/adora_head_control_dora_node/: MOTOR_MG4010E.py  test_SerialLiftingMotor.py
DORA/adora_lifting_motor_control_dora_node/: README.md  SerialLiftingMotor.py  SerialLiftingMotor_driver_dora.py  driver_dora.yaml  test_Motor.py
DORA/adora_serialliftingmotor_dora_node/: driver_dora.yaml
DORA/adora_suction_pump_control_dora_node/: README.md  SuctionPumpController.py  SuctionPump_driver_dora.py  dora_test.py  suction_pump_driver_dora.yaml
ROS2/: README.MD
ROS2/SerialLiftingMotor_ROS2/: CMakeLists.txt  README.md
ROS2/SerialLiftingMotor_ROS2/launch/: serialliftingmotor.launch.py
ROS2/SerialLiftingMotor_ROS2/src/: serialliftingmotor.cpp
ROS2/adora_chassis_control/: README.md
ROS2/adora_chassis_control/adora_chassis_bringup/: CMakeLists.txt  package.xml
ROS2/adora_chassis_control/adora_msgs/: CMakeLists.txt
ROS2/adora_head_control/: README.MD  package.xml  setup.cfg  setup.py
ROS2/adora_lifting_motor_control/: CMakeLists.txt  README.md  package.xml
ROS2/adoraa1mini_bringup/: CMakeLists.txt
adora_chassis_dora_node/: CMakeLists.txt  README.md  adora2mini_dataflow.yml
adora_chassis_dora_node/src/: adora_chassis_dora_node_V1.cc  adoraa1mini_dora_node_V1.cc  mickx4_bringup_v3.cc
adora_serialliftingmotor_dora_node/: SerialLiftingMotor.py  SerialLiftingMotor_driver_dora.py
(+13 files in other folders)
